--- a/app/src/main/res/layout/activity_reproductor_video.xml
+++ b/app/src/main/res/layout/activity_reproductor_video.xml
@@ -9,15 +9,17 @@
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
     android:gravity="center_vertical|center_horizontal|center"
-    android:background="@color/list_divider">
+    android:background="#000">
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#000"
         android:gravity="center">
         <VideoView
             android:id="@+id/video"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
+            android:background="#000"
             android:gravity="center" />
         <ProgressBar
             android:id="@+id/progressBar1"
