--- a/app/src/main/res/layout/activity_videos2.xml
+++ b/app/src/main/res/layout/activity_videos2.xml
@@ -6,7 +6,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.skysiteofi2.elorganista.Videos2">
-
+    <ProgressBar
+        android:id="@+id/progressBar4"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
     <ExpandableListView
         android:id="@+id/lvExp"
         android:layout_height="match_parent"
