--- a/app/src/main/res/layout/fragment_seccion.xml
+++ b/app/src/main/res/layout/fragment_seccion.xml
@@ -8,7 +8,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:padding="25dp" />
     <ListView
         android:id="@+id/niveles"
         android:layout_width="match_parent"
