--- a/app/src/main/res/layout/dialog_cargando.xml
+++ b/app/src/main/res/layout/dialog_cargando.xml
@@ -11,6 +11,6 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
-        />
+        android:padding="25dp" />
 
 </LinearLayout>
