--- a/app/src/main/res/layout/video_list_item.xml
+++ b/app/src/main/res/layout/video_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:orientation="horizontal">
@@ -14,13 +15,12 @@
         android:layout_centerVertical="true" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        >
+        android:layout_alignParentStart="true">
         <TextView
             android:id="@+id/titulo_video"
             android:layout_width="wrap_content"
@@ -40,6 +40,30 @@
             android:layout_marginRight="8dp"
             android:textColor="@color/counter_text_color"/>
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center">
+        <ProgressBar
+            android:id="@+id/progress_accion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:max="100"
+            android:progress="1"
+            android:elevation="0dp"
+            android:padding="25dp" />
+        <ImageView
+            android:id="@+id/ic_accion"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_down"
+            android:visibility="visible"
+            />
+    </LinearLayout>
 
 </LinearLayout>
