--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,7 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
-
-        android:src="@drawable/ic_whats_hot" />
+        android:src="@drawable/organistalogo_horizontal" />
 
 </RelativeLayout>
