--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,12 +2,12 @@
 <resources>
     <color name="colorPrimary">#193e58</color>
     <color name="colorPrimaryStatus">#0d1e29</color>
-    <color name="colorPrimaryDark">#0d1e29</color>
+    <color name="colorPrimaryDark">#e2e2e2</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="list_item_title">#ffffff</color>
+    <color name="list_item_title">#414141</color>
     <color name="list_background">#fdf9f9</color>
     <color name="list_background_pressed">#992416</color>
-    <color name="list_divider">#1f455e</color>
-    <color name="counter_text_bg">#626262</color>
+    <color name="list_divider">#898989</color>
+    <color name="counter_text_bg">#cfcfcf</color>
     <color name="counter_text_color">#c5c4c4</color>
 </resources>
