cambio de colores

--- a/app/src/main/res/layout/video_list_item.xml
+++ b/app/src/main/res/layout/video_list_item.xml
@@ -30,7 +30,7 @@
             android:layout_toRightOf="@id/zoom_video"
             android:minHeight="?android:attr/listPreferredItemHeightSmall"
             android:textAppearance="?android:attr/textAppearanceListItemSmall"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/list_item_title"
             android:gravity="center_vertical"
             android:paddingLeft="0dp"/>
 
