--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -10,6 +10,7 @@
         android:id="@+id/lblListHeader"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/list_item_title"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textSize="22dp" />
 
