--- a/app/src/main/res/layout/list_simple_item.xml
+++ b/app/src/main/res/layout/list_simple_item.xml
@@ -5,5 +5,6 @@
     android:textSize="26dip"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
+    android:textColor="@color/list_item_title"
     android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
     xmlns:android="http://schemas.android.com/apk/res/android" />
