--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#193e58</color>
-    <color name="colorPrimaryStatus">#0d1e29</color>
-    <color name="colorPrimaryDark">#e2e2e2</color>
+    <color name="colorPrimaryStatus">#f2f2f2</color>
+    <color name="colorPrimaryDark">#f5f5f5</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="list_item_title">#414141</color>
+    <color name="list_item_title">#000000</color>
     <color name="list_background">#fdf9f9</color>
     <color name="list_background_pressed">#992416</color>
     <color name="list_divider">#898989</color>
-    <color name="counter_text_bg">#cfcfcf</color>
-    <color name="counter_text_color">#c5c4c4</color>
+    <color name="counter_text_bg">#0d0d0d</color>
+    <color name="counter_text_color">#262626</color>
 </resources>
